--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/index.css">
   <title>Научиться учиться</title>
 </head>
 <body class="page">
@@ -15,7 +14,7 @@
       <a href="#description" class="header__link">Узнать &rarr;</a>
     </p>
     <img class="header__main-illustration" alt="Опять два" src="images/header-image.png">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation"></div>
   </header>
   <main class="content">
     <section class="description" id="description">
@@ -23,10 +22,64 @@
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-          <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+          <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
           <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
       </div>
+    </section>
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+      <ul class="cards">
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-attention.png" alt="Два вида внимания">
+          <h3 class="cards__title">Два вида внимания</h3>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-recall.png" alt="рекол">
+          <h3 class="cards__title">Recall</h3>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-interliving.png" alt="интерливинг">
+          <h3 class="cards__title">Интерливинг</h3>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-question.png" alt="вопросы">
+          <h3 class="cards__title">Вопросы</h3>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-competence.png" alt="компетентности">
+          <h3 class="cards__title">Иллюзия компетентности</h3>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </li>
+        <li class="cards__item">
+        </li>
+      </ul>
+    </section>
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+      <div class="video__iframes">
+        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </section>
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </div>
+    </section>
+    <section class="feynman">
+      <a href=#feynman class="feynman__link">Подробнее &rarr;</a>
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
     </section>
     <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
@@ -68,13 +121,21 @@
         </li>
       </ul>
     </section>
-    <section class="feynman">
-      <a href=#kaufman class="feynman__link">Подробнее &rarr;</a>
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <p class="feynman__subtitle">Выучить и не забыть.</p>
+    <section class="khan">
+      <div class="khan__container">
+        <p class="khan__author">Салман Хан</p>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+        <div class="khan__book-container">
+          <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга Хана">
+          <a target="_blank" href="https://www.ozon.ru/product/ves-mir-shkola-preobrazovannoe-obrazovanie-162999126/?sh=2q1TTtmJyg&utm_campaign=productpage_link&utm_medium=share_button&utm_source=smm" class="khan__buy-link">Купить книгу &rarr;</a>
+        </div>
+      </div>
     </section>
     <section class="kaufman" id="kaufman">
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
       <ul class="table table_theme_dark">
@@ -120,6 +181,16 @@
         </li>
       </ul>
     </section>
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <div class="resources__logo-zone">
+        <a target="_blank" href="https://arzamas.academy/" class="resources__link"><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
+        <a target="_blank" href="https://nplus1.ru/" class="resources__link"><img class="resources__logo" src="images/logo/resources-n1.svg" alt="н+1"></a>
+        <a target="_blank" href="https://strelkamag.com/ru" class="resources__link"><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка"></a>
+        <a target="_blank" href="https://polka.academy/" class="resources__link"><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка"></a>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="footer__columns">
@@ -139,8 +210,8 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <nav class="footer__column-links">
           <a href="#" class="footer__column-link"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="иконка">Facebook</a>
-          <a href="https://vk.com/mel_svk" target="_blank" class="footer__column-link"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка">ВКонтакте</a>
-          <a href="http://instagram.com/ndrmln_ml" target="_blank" class="footer__column-link"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="иконка">Instargam</a>
+          <a target="_blank" href="https://vk.com/mel_svk" class="footer__column-link"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка">ВКонтакте</a>
+          <a target="_blank" href="http://instagram.com/ndrmln_ml" class="footer__column-link"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="иконка">Instargam</a>
         </nav>
       </div>
     </div>
