--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="logo logo_place_header"></div>
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#description" class="header__link">Узнать &rarr;</a>
+      <a href="#description" class="header__link link">Узнать &rarr;</a>
     </p>
     <img class="header__main-illustration" alt="Опять два" src="images/header-image.png">
     <div class="header__square-pic rotation"></div>
@@ -56,16 +56,14 @@
           <h3 class="cards__title">Иллюзия компетентности</h3>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
         </li>
-        <li class="cards__item">
-        </li>
       </ul>
     </section>
     <section class="video">
       <h2 class="section-title">Видео нa TED</h2>
       <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <div class="video__iframes">
-        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
     <section class="oakley">
@@ -77,7 +75,7 @@
       </div>
     </section>
     <section class="feynman">
-      <a href=#feynman class="feynman__link">Подробнее &rarr;</a>
+      <a href=#feynman class="feynman__link link">Подробнее &rarr;</a>
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
     </section>
@@ -125,12 +123,12 @@
       <div class="khan__container">
         <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
-        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
         <p class="khan__quote-author">Джордж Лукас</p>
         <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
           <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга Хана">
-          <a target="_blank" href="https://www.ozon.ru/product/ves-mir-shkola-preobrazovannoe-obrazovanie-162999126/?sh=2q1TTtmJyg&utm_campaign=productpage_link&utm_medium=share_button&utm_source=smm" class="khan__buy-link">Купить книгу &rarr;</a>
+          <a target="_blank" href="https://www.ozon.ru/product/ves-mir-shkola-preobrazovannoe-obrazovanie-162999126/?sh=2q1TTtmJyg&utm_campaign=productpage_link&utm_medium=share_button&utm_source=smm" class="khan__buy-link link">Купить книгу &rarr;</a>
         </div>
       </div>
     </section>
@@ -184,12 +182,12 @@
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-      <div class="resources__logo-zone">
-        <a target="_blank" href="https://arzamas.academy/" class="resources__link"><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
-        <a target="_blank" href="https://nplus1.ru/" class="resources__link"><img class="resources__logo" src="images/logo/resources-n1.svg" alt="н+1"></a>
-        <a target="_blank" href="https://strelkamag.com/ru" class="resources__link"><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка"></a>
-        <a target="_blank" href="https://polka.academy/" class="resources__link"><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка"></a>
-      </div>
+      <ul class="resources__logo-zone">
+        <li class="resources__link link"><a target="_blank" href="https://arzamas.academy/"><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a></li>
+        <li class="resources__link link"><a target="_blank" href="https://nplus1.ru/"><img class="resources__logo" src="images/logo/resources-n1.svg" alt="н+1"></a></li>
+        <li class="resources__link link"><a target="_blank" href="https://strelkamag.com/ru"><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка"></a></li>
+        <li class="resources__link link"><a target="_blank" href="https://polka.academy/"><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка"></a></li>
+      </ul>
     </section>
   </main>
   <footer class="footer">
@@ -201,17 +199,17 @@
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <nav class="footer__column-links">
-          <a href="#" class="footer__column-link">Главная</a>
-          <a href="#" class="footer__column-link">Концепция</a>
-          <a href="#" class="footer__column-link">Наставники</a>
+          <a href="#" class="footer__column-link link">Главная</a>
+          <a href="#" class="footer__column-link link">Концепция</a>
+          <a href="#" class="footer__column-link link">Наставники</a>
         </nav>
       </div>
       <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <nav class="footer__column-links">
-          <a href="#" class="footer__column-link"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="иконка">Facebook</a>
-          <a target="_blank" href="https://vk.com/mel_svk" class="footer__column-link"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка">ВКонтакте</a>
-          <a target="_blank" href="http://instagram.com/ndrmln_ml" class="footer__column-link"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="иконка">Instargam</a>
+          <a href="#" class="footer__column-link link"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="иконка">Facebook</a>
+          <a target="_blank" href="https://vk.com/mel_svk" class="footer__column-link link"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка">ВКонтакте</a>
+          <a target="_blank" href="http://instagram.com/ndrmln_ml" class="footer__column-link link"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="иконка">Instargam</a>
         </nav>
       </div>
     </div>
